Bug 875665 - Fix activate action for <textarea/> and add action tests for text input elements. r=surkov