accessible/tests/mochitest/actions.js
@@ -5,9 +5,10 @@ const MOUSEDOWN_EVENT = 1;
 const MOUSEUP_EVENT = 2;
 const CLICK_EVENT = 4;
 const COMMAND_EVENT = 8;
+const FOCUS_EVENT = 16;
 
 const CLICK_EVENTS = MOUSEDOWN_EVENT | MOUSEUP_EVENT | CLICK_EVENT;
-const ALL_EVENTS = CLICK_EVENTS | COMMAND_EVENT;
+const XUL_EVENTS = CLICK_EVENTS | COMMAND_EVENT;
 
 ////////////////////////////////////////////////////////////////////////////////
 // Public functions
@@ -74,6 +75,9 @@ function testActions(aArray)
 
       if (events & COMMAND_EVENT)
         eventSeq.push(new checkerOfActionInvoker("command", elm));
+
+      if (events & FOCUS_EVENT)
+        eventSeq.push(new focusChecker(elm));
     }
 
     if (actionObj.eventSeq)
